--- a/src/Components/AboutMe/style.module.scss
+++ b/src/Components/AboutMe/style.module.scss
@@ -144,7 +144,7 @@
     border-radius: 1rem;
     box-sizing: border-box;
     left: 5%;
-    transition: all 0.5s;
+    transition: all 0.8s;
 
     &:nth-child(odd) {
       background-color: rgb(230, 230, 230);
@@ -201,8 +201,8 @@
   a {
     display: flex;
     flex-direction: column;
-    width: 6rem;
-    height: 6rem;
+    width: 5rem;
+    height: 5rem;
     padding: 5px;
     justify-content: center;
     align-items: center;
@@ -243,6 +243,12 @@
   .profile {
     width: 30rem;
     height: 30rem;
+  }
+  .link {
+    a {
+      width: 6rem;
+      height: 6rem;
+    }
   }
 }
 @media all and (min-width: 1440px) {
