--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   margin-bottom: 3rem;
   align-items: center;
-  border-radius: 0 0 12px 0;
+  border-radius: 5px 0 12px 0;
   background-color: rgb(234, 223, 255);
   box-sizing: border-box;
   
