--- a/src/Components/Skills/style.module.scss
+++ b/src/Components/Skills/style.module.scss
@@ -24,12 +24,18 @@
   width: 80%;
   padding: 2rem;
   margin: 3rem auto;
-  // border-radius: 0 1.5rem 1.5rem 0;
   border-radius: 1.5rem;
   overflow: hidden;
-  border: 2px solid rgba(140, 82, 255, 0.3);
+  border: 3px solid rgba(140, 82, 255, 0.1);
   display: flex;
+  transition: all 0.7s;
 
+  &:hover {
+    border: 3px solid rgba(140, 82, 255, 0.3);
+  }
+  &:first-child .title {
+    background-color: orange;
+  }
   &:nth-child(2) .title {
     background-color: blue;
   }
@@ -52,7 +58,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: orange;
 
     span {
       font-size: 1.4rem;
@@ -71,8 +76,8 @@
 
   div {
     margin: 0 auto;
-    width: 6rem;
-    height: 6rem;
+    width: 3.5rem;
+    height: 3.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,6 +87,8 @@
 
     &:hover {
       border: 2px solid #ccc;
+      box-shadow: 0 0 0 1px #ccc inset; 
+      opacity: 0.3;
     }
     &:hover img{
         animation: shake 0.9s ease-in-out infinite;
