style: Scrollbar styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,11 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 1.1rem;
+  background-color: rgb(162, 115, 255);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(217, 198, 255);
+}
+
