11/22 포폴 추가 및 코드 정리

--- a/src/Components/MyProjects/style.module.scss
+++ b/src/Components/MyProjects/style.module.scss
@@ -16,13 +16,16 @@
     transition: all 1s;
   }
   .project1 {
-    background-image: url(/src/img/project1.png);
+    background-image: url(src/assets/img/project1.png);
   }
   .project2 {
-    background-image: url(/src/img/project2.png);
+    background-image: url(src/assets/img/project2.png);
   }
   .project3 {
-    background-image: url(/src/img/project3.png);
+    background-image: url(src/assets/img/project3.png);
+  }
+  .project4 {
+    background-image: url(src/assets/img/project4.png);
   }
   div:hover {
     background-size: 125%;
