add: project4 & build file update

--- a/src/Components/AboutMe/style.module.scss
+++ b/src/Components/AboutMe/style.module.scss
@@ -61,7 +61,7 @@
   height: 25rem;
   margin: auto;
   border-radius: 15%;
-  background: no-repeat 50% 5%/100% url("src/assets/img/ai_profile.jpg");
+  background: no-repeat 50% 5%/100% url("/image/ai_profile.jpg");
   background-size: 100%;
   transition: all 0.7s;
 
