--- a/src/index.scss
+++ b/src/index.scss
@@ -161,13 +161,13 @@ a {
 }
 @font-face {
   font-family: "Bungee";
-  src: url("./assets/font/Bungee-Regular.ttf") format("truetype");
+  src: url("./assets/Bungee-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "NotoSansKR";
-  src: url("./assets/font/NotoSansKR-Regular.ttf") format("truetype");
+  src: url("./assets/NotoSansKR-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "NotoSansKR_Black";
-  src: url("./assets/font/NotoSansKR-Black.ttf") format("truetype");
+  src: url("./assets/NotoSansKR-Black.ttf") format("truetype");
 }
